--- a/views/beaches/new.ejs
+++ b/views/beaches/new.ejs
@@ -1,9 +1,9 @@
 <% include ../partials/header %>
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Create a New Campground</h1>
+        <h1 style="text-align: center">Create a New Beach</h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/campgrounds" method="POST">
+            <form action="/beaches" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="name" placeholder="name">
                 </div>
@@ -20,7 +20,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go Back</a>
+            <a href="/beaches">Go Back</a>
         </div>
     </div>
 
