--- a/views/beaches/index.ejs
+++ b/views/beaches/index.ejs
@@ -3,24 +3,24 @@
  <div class="container">
      <header class="jumbotron">
          <div class="container">
-             <h1>Welcome To YelpCamp!</h1>
-             <p>View our hand-picked campgrounds from all over the world</p>
+             <h1>Welcome To BeachRate!</h1>
+             <p>View our hand-picked beaches from all over Greece!</p>
              <p>
-                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
+                <a class="btn btn-primary btn-large" href="/beaches/new">Add New Beach</a>
              </p>
          </div>
      </header>
      
      <div class="row text-center" style="display:flex; flex-wrap: wrap;">
-        <% campgrounds.forEach(function(campground){ %>
+        <% beaches.forEach(function(beach){ %>
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
-                   <img src="<%= campground.image %>">
+                   <img src="<%= beach.image %>">
                    <div class="caption">
-                       <h4><%= campground.name %></h4>
+                       <h4><%= beach.name %></h4>
                    </div>
                    <p>
-                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                       <a href="/beaches/<%= beach._id %>" class="btn btn-primary">More Info</a>
                    </p>
                 </div>
             </div>
@@ -32,13 +32,13 @@
         <% if (current == 1) { %>
         <li class="disabled"><a>First</a></li>
         <% } else { %>
-        <li><a href="/campgrounds">First</a></li>
+        <li><a href="/beaches">First</a></li>
         <% } %>
  
         <% if (current == 1) { %>
         <li class="disabled"><a>«</a></li>
         <% } else { %>
-        <li><a href="/campgrounds?page=<%= Number(current) - 1 %>">«</a></li>
+        <li><a href="/beaches?page=<%= Number(current) - 1 %>">«</a></li>
         <% } %>
  
         <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
@@ -49,7 +49,7 @@
         <% if (i == current) { %>
         <li class="active"><a><%= i %></a></li>
         <% } else { %>
-        <li><a href="/campgrounds?page=<%= i %>"><%= i %></a></li>
+        <li><a href="/beaches?page=<%= i %>"><%= i %></a></li>
         <% } %>
         <% if (i == Number(current) + 4 && i < pages) { %>
         <li class="disabled"><a>...</a></li>
@@ -59,13 +59,13 @@
         <% if (current == pages) { %>
         <li class="disabled"><a>»</a></li>
         <% } else { %>
-        <li><a href="/campgrounds?page=<%= Number(current) + 1 %>">»</a></li>
+        <li><a href="/beaches?page=<%= Number(current) + 1 %>">»</a></li>
         <% } %>
  
         <% if (current == pages) { %>
         <li class="disabled"><a>Last</a></li>
         <% } else { %>
-        <li><a href="/campgrounds?page=<%= pages %>">Last</a></li>
+        <li><a href="/beaches?page=<%= pages %>">Last</a></li>
         <% } %>
     </ul>
     <% } %>
