--- a/views/beaches/show.ejs
+++ b/views/beaches/show.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
+            <p class="lead">BeachRate</p>
             <div class="list-group">
                 <li class="list-group-item active">Info 1</li>
                 <li class="list-group-item">Info 2</li>
@@ -11,15 +11,15 @@
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.image %>">
+                <img class="img-responsive" src="<%= beach.image %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">€<%= campground.price %>/night</h4>
-                    <h4><a><%=campground.name%></a></h4>
-                    <p><%= campground.description %></p>
-                    <p><em> Submitted By <%= campground.author.username %></em></p>
-                    <% if (currentUser && campground.author.id.equals(currentUser._id)){ %>
-                        <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                        <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                    <h4 class="pull-right">€<%= beach.price %>/night</h4>
+                    <h4><a><%=beach.name%></a></h4>
+                    <p><%= beach.description %></p>
+                    <p><em> Submitted By <%= beach.author.username %></em></p>
+                    <% if (currentUser && beach.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-warning" href="/beaches/<%= beach._id %>/edit">Edit</a>
+                        <form class="delete-form" action="/beaches/<%= beach._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-danger">Delete</button>
                         </form>
                     <% }%>
@@ -27,10 +27,10 @@
             </div>
             <div class="well">
                 <div class="text-right">
-                    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+                    <a class="btn btn-success" href="/beaches/<%= beach._id %>/comments/new">Add New Comment</a>
                 </div>
                 <hr>
-                <% campground.comments.forEach(function(comment){ %>
+                <% beach.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
                             <strong><%= comment.author.username %></strong>
@@ -40,8 +40,8 @@
                             </p>
                             <% if (currentUser && comment.author.id.equals(currentUser._id)){ %>
                             <a class="btn btn-xs btn-warning" 
-                            href="/campgrounds/<%= campground._id %>/comments/<%=comment._id%>/edit">Edit</a>
-                            <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                            href="/beaches/<%= beach._id %>/comments/<%=comment._id%>/edit">Edit</a>
+                            <form class="delete-form" action="/beaches/<%= beach._id %>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                                 <input type="submit" class="btn btn-xs btn-danger" value="Delete">
                             </form>
                             <% }%>
