--- a/views/beaches/index.ejs
+++ b/views/beaches/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %> 
 
  <div class="container">
-     <header class="jumbotron">
+     <header class="jumbotron bg-dark">
          <div class="container">
              <h1>Welcome To BeachRate!</h1>
              <p>View our hand-picked beaches from all over Greece!</p>
