--- a/views/beaches/edit.ejs
+++ b/views/beaches/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align: center">Edit <%= beach.name %></h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/beachs/<%= beach._id %>?_method=PUT" method="POST">
+            <form action="/beaches/<%= beach._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="beach[name]" value="<%= beach.name %>">
                 </div>
@@ -20,7 +20,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/beachs">Go Back</a>
+            <a href="/beaches">Go Back</a>
         </div>
     </div>
 
