--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
         </div> <!-- container -->
+        <footer class="footer">
+          <div class="container">
+            <p class="text-muted">&copy; Panagiotis Papagiannopoulos 2018 | <a href="/beaches">Home</a> | <a href="/beaches/new">New Beach</a></p>
+          </div>
+        </footer>
     <!-- jQuery CDN -->
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
